Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_AbreGaveta(const INTPTR ecfHandle);

DllImport int ECF_AbreNaoFiscal(const INTPTR ecfHandle, const PCHAR cpfCnpj);

DllImport int ECF_CancelaNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_CarregaComprovantesNaoFiscais(const INTPTR ecfHandle);

DllImport int ECF_CorrigeEstadoErro(const INTPTR ecfHandle, const BOOL reducaoZ);

DllImport int ECF_EfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_FechaNaoFiscal(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_LeituraMemoriaFiscalReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada);

DllImport int ECF_LerTotaisComprovanteNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_ProgramaComprovanteNaoFiscal(const INTPTR ecfHandle, const PCHAR descricao, const PCHAR tipo, const PCHAR posicao);

DllImport int ECF_RegistraItemNaoFiscal(const INTPTR ecfHandle, const PCHAR codCNF, const double value, const PCHAR obs);

DllImport int ECF_Sangria(const INTPTR ecfHandle, const double valor, const PCHAR obs);

DllImport int ECF_SubtotalizaNaoFiscal(const INTPTR ecfHandle, const double descontoAcrescimo, const PCHAR mensagemRodape);

DllImport int ECF_Suprimento(const INTPTR ecfHandle, const double valor, const PCHAR obs);